
Translucence Change Log


v. 2.3.2 (2012-06-03)
----------------------------------------------------
This release refactors theme css to reduce and simplify it. This release also add
minor revisions to UI
		
		
	* Change: 
		Update right header meta-area options to allow for custom text/links with
		same options as header left meta-area.
		(2012-06-13 - Alex Chapin)
		
	* Change: 
		Refactor theme options css to use shorter consolidated syntax.
		(2012-06-13 - Alex Chapin)
		
	* Change: 
		Remove new post and new pages links from front end view.
		(2012-06-13 - Alex Chapin)
	



v. 2.3.1 (2012-01-13)
----------------------------------------------------
This release refactors theme functions to better conform to WordPress theme
development standards. This release also improves usability on mobile and touch
enabled UIs
		
		
	* Change: 
		updated title of inline page listing to be title of parent post.
		(2011-09-02 - Alex Chapin)
		
	* Change: 
		updated calendar widget styles to work better with translucent sidebars.
		(2011-08-02 - Alex Chapin)
		
	* Change: 
		updated widget link styles to display as blocks for better usability on
		mobile and touch platforms.
		(2011-08-01 - Alex Chapin)
		
	* Change: 
		refactored markup and css for displaying site title and description for
		better cross-browser compatibility.
		(2011-06-06 - Alex Chapin)
		
	* Change: 
		refined print css for better printing of site.
		(2011-06-04 - Alex Chapin)
		
	* New feature: 
		added a translucence_get_author function to abstract this functionality in
		order to make it easier to extend with plugins (such as the co-author
		plugin). 
		(2011-06-04 - Alex Chapin)
		
	* New feature: 
		added functions-plugins.php for adding plugin specific functions.
		(2011-06-04 - Alex Chapin)
		
	* New feature: 
		included new Metrics child theme.
		(2011-05-13 - Alex Chapin)
		
	* New feature: 
		added theme option for default or customizable variations.
		(2011-05-02 - Alex Chapin)				
		